SFCompLibrary/src/objects/AvaUserMessage__c.object
<CustomObject>
    <description>Temp Table to Store User Messages for AvaMessageBox and AvaAddressVerify Controller Classes</description>
    <fields>
        <fullName>City_Col2__c</fullName>
        <description>Used for City Portion of Validated Address in *Verify*Validate pages</description>
        <label>City_Col2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Col2__c</fullName>
        <description>Used for Country portion of Validated Address in *Verify*Validate pages - 2 char ISO code</description>
        <label>Country_Col2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageBoxTitle__c</fullName>
        <label>MessageBoxTitle</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Col1__c</fullName>
        <description>The Message to Display on an AvaMessageBox or AvaAddressValidate</description>
        <label>Message Col1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message_Col2__c</fullName>
        <description>2nd column to display on AddressVerify Page</description>
        <label>Message Col2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostalCode_Col2__c</fullName>
        <description>Postal Code for Validated addresses in *Verify*Validate pages</description>
        <label>PostalCode_Col2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Col2__c</fullName>
        <description>Used for State/Province portion of Validated Address in *Verify*Validate pages.  ISO 2 char abbreviations</description>
        <label>Region_Col2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnPageID__c</fullName>
        <label>ReturnPageID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Col2__c</fullName>
        <label>Street Address Col2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <label>AvaUserMessage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AvaUserMessage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AvaUserMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>